[project]
name = "qlib-test4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.11.0",
    "gputil>=1.4.0",
    "ipykernel>=6.15.0",
    "jupyter>=1.0.0",
    "lxml>=4.9.0",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "openpyxl>=3.0.0",
    "pandas>=1.5.0",
    "plotly>=5.10.0",
    "psutil>=7.0.0",
    "python-dateutil>=2.8.0",
    "pytz>=2022.1",
    "requests>=2.28.0",
    "scikit-learn>=1.1.0",
    "seaborn>=0.11.0",
    "tensorflow>=2.19.0",
    "torch>=2.0.0",
    "tqdm>=4.64.0",
    "xlsxwriter>=3.0.0",
    "yfinance>=0.2.18",
]
